--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -252,8 +252,6 @@ allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.18;
 allow 178.218.144.51;
-allow 178.218.144.64;
-allow 178.218.144.96;
 allow 178.218.144.99;
 allow 179.35.13.19;
 allow 179.43.128.16;
@@ -932,7 +930,6 @@ allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.137.248.100;
-allow 23.137.248.149;
 allow 23.137.248.152;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -1001,7 +998,6 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
-allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1255,7 +1251,6 @@ allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
 allow 2a04:52c0:104:fe02::1;
 allow 2a04:52c0:105:78fc::1;
-allow 2a04:52c0:105:82c0::1;
 allow 2a04:52c0:105:98a3::1;
 allow 2a04:52c0:106:394::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1491,9 +1486,8 @@ allow 2a0e:4005:1002:ffff:185:40:4:64;
 allow 2a0e:4005:1002:ffff:185:40:4:92;
 allow 2a0e:4005:1002:ffff:185:40:4:94;
 allow 2a0e:4005:1002:ffff:185:40:4:95;
+allow 2a0e:97c0:3e3:50b::1;
 allow 2a0e:97c0:3ea:bc::1;
-allow 2a0e:b107:dd0::3:ed78:7632;
-allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:e701:1198::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
@@ -1610,15 +1604,16 @@ allow 37.228.129.5;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 45.11.229.132;
 allow 45.11.59.28;
 allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1711,8 +1706,8 @@ allow 51.89.153.112;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
-allow 5.255.100.224;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1863,6 +1858,7 @@ allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.116.86;
 allow 94.16.121.91;
+allow 94.177.106.54;
 allow 94.228.163.25;
 allow 94.230.208.147;
 allow 94.230.208.148;
