--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -252,8 +252,6 @@ set_real_ip_from 178.20.55.16;
 set_real_ip_from 178.20.55.182;
 set_real_ip_from 178.218.144.18;
 set_real_ip_from 178.218.144.51;
-set_real_ip_from 178.218.144.64;
-set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 179.35.13.19;
 set_real_ip_from 179.43.128.16;
@@ -932,7 +930,6 @@ set_real_ip_from 23.129.64.228;
 set_real_ip_from 23.129.64.229;
 set_real_ip_from 23.129.64.230;
 set_real_ip_from 23.137.248.100;
-set_real_ip_from 23.137.248.149;
 set_real_ip_from 23.137.248.152;
 set_real_ip_from 23.137.250.83;
 set_real_ip_from 23.137.253.108;
@@ -1001,7 +998,6 @@ set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
 set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
-set_real_ip_from 2602:fc24:12:3f11:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:4870:39ca:318:0:1;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1255,7 +1251,6 @@ set_real_ip_from 2a04:52c0:104:4735::1;
 set_real_ip_from 2a04:52c0:104:ad97::1;
 set_real_ip_from 2a04:52c0:104:fe02::1;
 set_real_ip_from 2a04:52c0:105:78fc::1;
-set_real_ip_from 2a04:52c0:105:82c0::1;
 set_real_ip_from 2a04:52c0:105:98a3::1;
 set_real_ip_from 2a04:52c0:106:394::1;
 set_real_ip_from 2a04:52c0:108:a34f::1;
@@ -1491,9 +1486,8 @@ set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:64;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:92;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:94;
 set_real_ip_from 2a0e:4005:1002:ffff:185:40:4:95;
+set_real_ip_from 2a0e:97c0:3e3:50b::1;
 set_real_ip_from 2a0e:97c0:3ea:bc::1;
-set_real_ip_from 2a0e:b107:dd0::3:ed78:7632;
-set_real_ip_from 2a0e:b107:dd0::3:fa35:9316;
 set_real_ip_from 2a0e:e701:1198::1;
 set_real_ip_from 2a0f:85c1:356:3238::1;
 set_real_ip_from 2a0f:93c1:26:1f2::9ce5;
@@ -1610,15 +1604,16 @@ set_real_ip_from 37.228.129.5;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
+set_real_ip_from 45.11.229.132;
 set_real_ip_from 45.11.59.28;
 set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
+set_real_ip_from 45.135.180.27;
 set_real_ip_from 45.137.205.138;
 set_real_ip_from 45.137.205.140;
 set_real_ip_from 45.138.16.107;
@@ -1711,8 +1706,8 @@ set_real_ip_from 51.89.153.112;
 set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
-set_real_ip_from 5.255.100.224;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
@@ -1863,6 +1858,7 @@ set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
 set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
+set_real_ip_from 94.177.106.54;
 set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
