Update lists at 20241107-1200

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -317,7 +317,6 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:99a0:0:1000::2;
 deny 2a01:4262:1ab:ffff::133;
 deny 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
-deny 2a01:4f9:2b:75d::124:148;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
@@ -722,3 +721,4 @@ deny 2a12:dd47:8513::d;
 deny 2a12:dd47:8513::e;
 deny 2a12:dd47:8513::f;
 deny 2a13:d207:0:461::1;
+deny 2a14:3f80:5000::40;
