--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -191,6 +191,7 @@ allow 154.216.16.13;
 allow 154.216.16.20;
 allow 154.216.16.21;
 allow 154.216.16.24;
+allow 154.216.17.140;
 allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
@@ -840,6 +841,7 @@ allow 201.23.12.101;
 allow 201.23.14.225;
 allow 201.23.16.249;
 allow 202.182.99.129;
+allow 202.27.114.40;
 allow 202.61.226.98;
 allow 204.137.14.104;
 allow 204.137.14.105;
@@ -866,7 +868,6 @@ allow 209.141.37.94;
 allow 209.141.46.203;
 allow 209.141.51.180;
 allow 209.141.51.30;
-allow 209.141.53.11;
 allow 209.141.54.203;
 allow 209.141.55.26;
 allow 209.141.60.219;
@@ -1192,7 +1193,6 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
-allow 2a01:4f9:2b:75d::124:148;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
@@ -1597,6 +1597,7 @@ allow 2a12:dd47:8513::d;
 allow 2a12:dd47:8513::e;
 allow 2a12:dd47:8513::f;
 allow 2a13:d207:0:461::1;
+allow 2a14:3f80:5000::40;
 allow 31.129.22.65;
 allow 31.13.195.22;
 allow 31.133.0.210;
@@ -1620,6 +1621,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1878,7 +1880,6 @@ allow 94.72.98.8;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
-allow 95.216.107.148;
 allow 96.126.98.146;
 allow 96.66.15.152;
 allow 98.128.173.33;
