--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -317,7 +317,6 @@ set_real_ip_from 2a00:1dc0:caff:8b::24bd;
 set_real_ip_from 2a00:99a0:0:1000::2;
 set_real_ip_from 2a01:4262:1ab:ffff::133;
 set_real_ip_from 2a01:4f8:222:8c5:ba2d:8c71:db15:171b;
-set_real_ip_from 2a01:4f9:2b:75d::124:148;
 set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
@@ -722,3 +721,4 @@ set_real_ip_from 2a12:dd47:8513::d;
 set_real_ip_from 2a12:dd47:8513::e;
 set_real_ip_from 2a12:dd47:8513::f;
 set_real_ip_from 2a13:d207:0:461::1;
+set_real_ip_from 2a14:3f80:5000::40;
