--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -16,7 +16,6 @@ allow 104.167.242.117;
 allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
-allow 104.219.232.126;
 allow 104.219.236.100;
 allow 104.244.72.115;
 allow 104.244.72.132;
@@ -182,7 +181,6 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
-allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -932,6 +930,7 @@ allow 23.129.64.228;
 allow 23.129.64.229;
 allow 23.129.64.230;
 allow 23.137.248.100;
+allow 23.137.248.149;
 allow 23.137.248.152;
 allow 23.137.250.83;
 allow 23.137.253.108;
@@ -1001,6 +1000,7 @@ allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
 allow 2602:2e5::104;
 allow 2602:2e6:0:4::;
+allow 2602:fc24:12:3f11:39ca:318:0:1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1198,6 +1198,9 @@ allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
+allow 2a02:4840:1:3::16;
+allow 2a02:4840:1:3::18;
+allow 2a02:4840:1:3::19;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1270,7 +1273,6 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1618,7 +1620,6 @@ allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1712,7 +1713,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1792,6 +1792,9 @@ allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
+allow 84.38.130.62;
+allow 84.38.130.66;
+allow 84.38.130.68;
 allow 85.10.210.197;
 allow 85.17.9.83;
 allow 85.239.41.130;
