Update lists at 20241108-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -181,6 +181,7 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
+allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -194,6 +195,7 @@ allow 154.216.18.191;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -222,6 +224,7 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
+allow 172.104.208.190;
 allow 172.105.161.162;
 allow 172.234.228.174;
 allow 172.81.131.110;
@@ -968,7 +971,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.161.232.50;
@@ -993,6 +995,7 @@ allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
+allow 2600:3c03:e000:19f:0:11:11:11;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
@@ -1273,6 +1276,7 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1522,6 +1526,7 @@ allow 2a0f:e586:f:f:c94a:de42:aac1:9045;
 allow 2a0f:e586:f:f:fca1:db52:9055:cff3;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
+allow 2a12:5940:144f::2;
 allow 2a12:5940:c826::2;
 allow 2a12:a800:1:1:194:26:192:161;
 allow 2a12:a800:1:1:194:26:192:77;
@@ -1620,6 +1625,7 @@ allow 45.129.84.247;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
+allow 45.135.180.27;
 allow 45.137.205.138;
 allow 45.137.205.140;
 allow 45.138.16.107;
@@ -1707,6 +1713,7 @@ allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.33.188;
 allow 5.181.80.107;
+allow 5.182.86.212;
 allow 51.89.138.51;
 allow 51.89.153.112;
 allow 51.91.18.151;
@@ -1765,6 +1772,7 @@ allow 72.211.49.235;
 allow 72.235.129.116;
 allow 74.82.47.194;
 allow 77.220.196.253;
+allow 77.221.157.237;
 allow 77.37.3.7;
 allow 77.48.28.236;
 allow 77.48.28.237;
@@ -1874,6 +1882,7 @@ allow 94.232.43.221;
 allow 94.32.66.15;
 allow 94.72.103.33;
 allow 94.72.98.8;
+allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
