--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -195,7 +195,6 @@ deny 154.216.18.191;
 deny 154.26.159.157;
 deny 158.69.1.13;
 deny 160.119.249.240;
-deny 161.35.129.51;
 deny 161.97.174.64;
 deny 162.210.173.17;
 deny 162.216.18.62;
@@ -933,7 +932,6 @@ deny 23.129.64.228;
 deny 23.129.64.229;
 deny 23.129.64.230;
 deny 23.137.248.100;
-deny 23.137.248.149;
 deny 23.137.248.152;
 deny 23.137.250.83;
 deny 23.137.253.108;
@@ -971,6 +969,7 @@ deny 23.154.177.5;
 deny 23.154.177.6;
 deny 23.154.177.7;
 deny 23.154.177.8;
+deny 23.154.177.9;
 deny 23.155.24.4;
 deny 23.155.8.104;
 deny 23.161.232.50;
@@ -1003,7 +1002,6 @@ deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
 deny 2602:2e5::104;
 deny 2602:2e6:0:4::;
-deny 2602:fc24:12:3f11:39ca:318:0:1;
 deny 2602:fc24:12:4870:39ca:318:0:1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:12:a679::1;
@@ -1496,6 +1494,7 @@ deny 2a0e:4005:1002:ffff:185:40:4:95;
 deny 2a0e:97c0:3ea:bc::1;
 deny 2a0e:b107:dd0::3:ed78:7632;
 deny 2a0e:b107:dd0::3:fa35:9316;
+deny 2a0e:bfc0:0:5::2;
 deny 2a0e:e701:1198::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
@@ -1526,7 +1525,6 @@ deny 2a0f:e586:f:f:c94a:de42:aac1:9045;
 deny 2a0f:e586:f:f:fca1:db52:9055:cff3;
 deny 2a10:c800:1:9cc6::1;
 deny 2a11:6100:0:22:a236:9fff:fe9e:36ea;
-deny 2a12:5940:144f::2;
 deny 2a12:5940:c826::2;
 deny 2a12:a800:1:1:194:26:192:161;
 deny 2a12:a800:1:1:194:26:192:77;
@@ -1621,11 +1619,9 @@ deny 45.118.133.44;
 deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.129.84.246;
-deny 45.129.84.247;
 deny 45.129.84.249;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.135.180.27;
 deny 45.137.205.138;
 deny 45.137.205.140;
 deny 45.138.16.107;
@@ -1695,6 +1691,7 @@ deny 45.95.169.226;
 deny 45.95.169.227;
 deny 45.95.169.228;
 deny 45.95.169.229;
+deny 45.95.169.255;
 deny 45.95.202.48;
 deny 46.165.243.36;
 deny 46.232.251.191;
@@ -1713,13 +1710,13 @@ deny 51.81.254.14;
 deny 51.81.254.15;
 deny 51.81.33.188;
 deny 5.181.80.107;
-deny 5.182.86.212;
 deny 51.89.138.51;
 deny 51.89.153.112;
 deny 51.91.18.151;
 deny 5.196.95.34;
 deny 5.255.100.219;
 deny 5.255.100.227;
+deny 5.255.100.26;
 deny 5.255.101.10;
 deny 5.255.103.235;
 deny 5.255.104.202;
@@ -1772,7 +1769,6 @@ deny 72.211.49.235;
 deny 72.235.129.116;
 deny 74.82.47.194;
 deny 77.220.196.253;
-deny 77.221.157.237;
 deny 77.37.3.7;
 deny 77.48.28.236;
 deny 77.48.28.237;
