Update lists at 20241110-0900

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -198,7 +198,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -582,7 +581,6 @@ allow 188.68.36.28;
 allow 188.68.41.191;
 allow 188.68.49.235;
 allow 188.68.52.231;
-allow 188.68.52.247;
 allow 190.120.229.98;
 allow 190.211.254.97;
 allow 192.108.48.150;
@@ -1204,9 +1202,6 @@ allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:418:6017::147;
 allow 2a02:418:6017::148;
-allow 2a02:4840:1:3::16;
-allow 2a02:4840:1:3::18;
-allow 2a02:4840:1:3::19;
 allow 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 allow 2a02:898:218::1;
 allow 2a02:898:218::2;
@@ -1503,6 +1498,7 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1621,7 +1617,6 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
-allow 45.129.84.247;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1706,8 +1701,6 @@ allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
 allow 51.81.222.62;
-allow 51.81.253.215;
-allow 51.81.253.216;
 allow 51.81.254.14;
 allow 51.81.254.15;
 allow 51.81.33.188;
@@ -1799,9 +1792,6 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
-allow 84.38.130.62;
-allow 84.38.130.66;
-allow 84.38.130.68;
 allow 85.10.210.197;
 allow 85.239.41.130;
 allow 85.93.218.204;
@@ -1823,6 +1813,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.234.157.254;
 allow 89.236.112.100;
 allow 89.37.95.34;
