--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -323,9 +323,6 @@ deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:418:6017::147;
 deny 2a02:418:6017::148;
-deny 2a02:4840:1:3::16;
-deny 2a02:4840:1:3::18;
-deny 2a02:4840:1:3::19;
 deny 2a02:8010:677e:f9d0:215:5dff:fe01:210c;
 deny 2a02:898:218::1;
 deny 2a02:898:218::2;
@@ -622,6 +619,7 @@ deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:2859::1;
 deny 2a0f:9400:7e11:73bc::1;
+deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:9400:7e11:b60::1;
 deny 2a0f:9400:7e11:ce4d::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
