--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -198,7 +198,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 161.97.174.64;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -429,7 +428,6 @@ allow 185.220.101.179;
 allow 185.220.101.18;
 allow 185.220.101.182;
 allow 185.220.101.183;
-allow 185.220.101.185;
 allow 185.220.101.186;
 allow 185.220.101.187;
 allow 185.220.101.188;
@@ -706,7 +704,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
@@ -948,7 +945,6 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -1021,10 +1017,10 @@ allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
+allow 2604:a00:50:2f:216:3eff:fe2c:e333;
 allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1302,7 +1298,6 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
@@ -1367,7 +1362,6 @@ allow 2a0b:f4c2:1::178;
 allow 2a0b:f4c2:1::179;
 allow 2a0b:f4c2:1::182;
 allow 2a0b:f4c2:1::183;
-allow 2a0b:f4c2:1::185;
 allow 2a0b:f4c2:1::186;
 allow 2a0b:f4c2:1::187;
 allow 2a0b:f4c2:1::188;
@@ -1621,6 +1615,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1717,7 +1712,6 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.103.235;
 allow 5.255.104.202;
@@ -1768,6 +1762,7 @@ allow 71.19.144.222;
 allow 72.14.179.10;
 allow 72.211.49.235;
 allow 72.235.129.116;
+allow 74.50.80.112;
 allow 74.82.47.194;
 allow 77.220.196.253;
 allow 77.37.3.7;
@@ -1780,7 +1775,6 @@ allow 80.210.78.252;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
-allow 80.78.22.218;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 81.16.33.42;
