--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -142,10 +142,10 @@ deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
+deny 2604:a00:50:2f:216:3eff:fe2c:e333;
 deny 2604:a880:400:d0::28:6001;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
-deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
 deny 2605:6400:10:1362::2;
@@ -422,7 +422,6 @@ deny 2a07:e03:2a::bcde;
 deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
-deny 2a0a:3840:8078:22:0:504e:16da:1337;
 deny 2a0b:7140:8:1:5054:ff:fe43:9f9;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
@@ -487,7 +486,6 @@ deny 2a0b:f4c2:1::178;
 deny 2a0b:f4c2:1::179;
 deny 2a0b:f4c2:1::182;
 deny 2a0b:f4c2:1::183;
-deny 2a0b:f4c2:1::185;
 deny 2a0b:f4c2:1::186;
 deny 2a0b:f4c2:1::187;
 deny 2a0b:f4c2:1::188;
