Update lists at 20241113-1800

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -179,7 +179,6 @@ allow 154.213.184.9;
 allow 154.213.184.90;
 allow 154.213.184.93;
 allow 154.213.185.133;
-allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -325,6 +324,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -696,8 +696,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.89;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1279,7 +1279,6 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1305,6 +1304,7 @@ allow 2a07:e03:2a::bcde;
 allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
+allow 2a0a:3840:8078:22:0:504e:16da:1337;
 allow 2a0a:c801:1:5::57;
 allow 2a0b:7140:8:1:5054:ff:fe43:9f9;
 allow 2a0b:f4c0:16c:10::1;
@@ -1506,7 +1506,6 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
-allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:ca80:0:e57f::82e1:3f1b;
@@ -1786,6 +1785,7 @@ allow 79.124.8.241;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
+allow 80.78.22.218;
 allow 80.82.78.14;
 allow 80.94.92.106;
 allow 80.94.92.92;
@@ -1825,7 +1825,6 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
-allow 89.213.174.212;
 allow 89.221.217.206;
 allow 89.234.157.254;
 allow 89.236.112.100;
@@ -1835,7 +1834,6 @@ allow 89.58.41.156;
 allow 91.132.144.59;
 allow 91.139.160.150;
 allow 91.188.254.218;
-allow 91.193.18.63;
 allow 91.202.5.104;
 allow 91.203.144.194;
 allow 91.203.145.116;
@@ -1872,7 +1870,6 @@ allow 93.99.104.40;
 allow 94.102.51.15;
 allow 94.142.241.194;
 allow 94.142.244.16;
-allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
 allow 94.16.116.86;
