Update lists at 20241114-1200

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -176,7 +176,6 @@ allow 154.213.184.79;
 allow 154.213.184.87;
 allow 154.213.184.9;
 allow 154.213.184.90;
-allow 154.213.184.93;
 allow 154.213.185.133;
 allow 154.213.185.165;
 allow 154.213.185.183;
@@ -326,6 +325,7 @@ allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.169.42;
+allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
 allow 185.183.157.214;
@@ -695,8 +695,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.92;
-allow 195.47.238.93;
+allow 195.47.238.89;
+allow 195.47.238.90;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -950,8 +950,6 @@ allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
-allow 23.154.177.14;
-allow 23.154.177.15;
 allow 23.154.177.16;
 allow 23.154.177.17;
 allow 23.154.177.18;
@@ -975,7 +973,6 @@ allow 23.154.177.5;
 allow 23.154.177.6;
 allow 23.154.177.7;
 allow 23.154.177.8;
-allow 23.154.177.9;
 allow 23.155.24.4;
 allow 23.155.8.104;
 allow 23.173.216.67;
@@ -1268,6 +1265,7 @@ allow 2a04:52c0:119:3f0b::1;
 allow 2a04:52c0:123:c6c3::1;
 allow 2a04:52c0:126:3ab8::1;
 allow 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
+allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
@@ -1736,6 +1734,7 @@ allow 5.255.121.71;
 allow 5.255.123.158;
 allow 5.255.123.164;
 allow 5.255.124.150;
+allow 5.255.125.196;
 allow 5.255.125.41;
 allow 5.255.127.222;
 allow 5.255.97.221;
