--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -385,6 +385,7 @@ deny 2a04:52c0:119:3f0b::1;
 deny 2a04:52c0:123:c6c3::1;
 deny 2a04:52c0:126:3ab8::1;
 deny 2a04:52c0:128:c6e7:50ef:cafe:babe:1337;
+deny 2a04:52c0:130:896e::1;
 deny 2a04:52c0:130:d285::1;
 deny 2a04:9dc0:31::c0cc:4d;
 deny 2a05:541:110:20::1;
