--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -12,6 +12,9 @@ allow 103.251.167.10;
 allow 103.251.167.20;
 allow 103.28.52.93;
 allow 104.131.183.19;
+allow 104.167.242.116;
+allow 104.167.242.117;
+allow 104.167.242.118;
 allow 104.192.1.138;
 allow 104.192.3.74;
 allow 104.219.232.126;
@@ -157,7 +160,6 @@ allow 154.16.116.61;
 allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
-allow 154.213.185.165;
 allow 154.213.185.183;
 allow 154.213.185.185;
 allow 154.213.185.230;
@@ -183,7 +185,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.19.214.213;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -211,7 +212,6 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
-allow 172.104.208.190;
 allow 172.104.243.155;
 allow 172.105.161.162;
 allow 172.234.228.174;
@@ -307,6 +307,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -686,7 +687,6 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
-allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
@@ -978,7 +978,6 @@ allow 2.58.56.90;
 allow 2600:3c00::f03c:91ff:fe73:f9ba;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c00::f03c:95ff:fe5d:8f00;
-allow 2600:3c03:e000:19f:0:11:11:11;
 allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:95ff:fe5d:562;
 allow 2600:3c0a::f03c:95ff:fe5d:a877;
@@ -995,6 +994,9 @@ allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:2b4::1;
 allow 2602:fc24:19:30::1;
 allow 2602:fc24:19:eb06::dead;
+allow 2602:fccf:310:1::a;
+allow 2602:fccf:310:1::b;
+allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
@@ -1003,7 +1005,6 @@ allow 2604:6600:0:42::2;
 allow 2604:a880:400:d0::28:6001;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
-allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1256,7 +1257,6 @@ allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
-allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:6bd4::1;
 allow 2a06:1280:bee1:2::ee12:230;
 allow 2a06:1700:0:12::1;
@@ -1479,6 +1479,7 @@ allow 2a0f:85c1:356:3238::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:df00:0:255::194;
@@ -1607,6 +1608,7 @@ allow 45.141.215.63;
 allow 45.141.215.80;
 allow 45.141.215.81;
 allow 45.141.215.88;
+allow 45.141.215.89;
 allow 45.141.215.90;
 allow 45.141.215.95;
 allow 45.141.215.97;
@@ -1779,6 +1781,7 @@ allow 89.147.110.82;
 allow 89.147.111.124;
 allow 89.147.111.87;
 allow 89.187.143.31;
+allow 89.213.174.212;
 allow 89.221.215.139;
 allow 89.221.217.206;
 allow 89.234.157.254;
