Update lists at 20241116-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -105,6 +105,7 @@ allow 108.181.124.143;
 allow 108.181.16.251;
 allow 108.181.27.205;
 allow 108.181.69.243;
+allow 108.61.189.136;
 allow 109.104.153.22;
 allow 109.169.33.163;
 allow 109.69.67.17;
@@ -189,6 +190,7 @@ allow 162.19.214.213;
 allow 162.210.173.17;
 allow 162.216.18.62;
 allow 162.247.72.192;
+allow 162.247.72.199;
 allow 162.247.74.200;
 allow 162.247.74.201;
 allow 162.247.74.202;
@@ -305,6 +307,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -373,7 +376,6 @@ allow 185.220.101.137;
 allow 185.220.101.138;
 allow 185.220.101.139;
 allow 185.220.101.14;
-allow 185.220.101.140;
 allow 185.220.101.142;
 allow 185.220.101.143;
 allow 185.220.101.145;
@@ -685,6 +687,7 @@ allow 198.96.155.3;
 allow 198.98.48.31;
 allow 198.98.48.33;
 allow 198.98.48.35;
+allow 198.98.50.199;
 allow 198.98.51.189;
 allow 198.98.51.249;
 allow 198.98.51.52;
@@ -994,12 +997,14 @@ allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fccf:310:1::c;
+allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
 allow 2605:2700:0:2:a800:ff:fe39:574;
+allow 2605:6400:10:1008:1111:1111:1111:1111;
 allow 2605:6400:10:1060:411f:41d8:11fe:716f;
 allow 2605:6400:10:12b:1877:e308:72b3:41b0;
 allow 2605:6400:10:1362::2;
@@ -1278,6 +1283,7 @@ allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
+allow 2a0a:c801:1:5::57;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -1307,7 +1313,6 @@ allow 2a0b:f4c2:1::135;
 allow 2a0b:f4c2:1::137;
 allow 2a0b:f4c2:1::138;
 allow 2a0b:f4c2:1::139;
-allow 2a0b:f4c2:1::140;
 allow 2a0b:f4c2:1::142;
 allow 2a0b:f4c2:1::143;
 allow 2a0b:f4c2:1::145;
@@ -1449,7 +1454,6 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
-allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1573,7 +1577,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
-allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
 allow 45.137.205.138;
@@ -1663,6 +1666,7 @@ allow 51.195.166.174;
 allow 51.222.136.218;
 allow 51.222.142.67;
 allow 51.38.225.46;
+allow 5.181.156.44;
 allow 51.81.222.62;
 allow 51.81.254.14;
 allow 51.81.254.15;
@@ -1734,6 +1738,7 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 79.124.8.241;
+allow 79.72.47.230;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1748,6 +1753,7 @@ allow 8.218.9.41;
 allow 82.208.23.192;
 allow 82.221.128.191;
 allow 82.221.131.5;
+allow 82.221.139.190;
 allow 82.68.49.227;
 allow 82.85.247.254;
 allow 83.217.9.73;
@@ -1759,7 +1765,6 @@ allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
 allow 85.10.210.197;
-allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
 allow 87.118.116.103;
