--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -140,12 +140,14 @@ deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
+deny 2602:fef9:100:1100::199;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
 deny 2604:6600:0:42::2;
 deny 2604:b480:3:6::2;
 deny 2605:2700:0:2:a800:ff:fe39:574;
+deny 2605:6400:10:1008:1111:1111:1111:1111;
 deny 2605:6400:10:1060:411f:41d8:11fe:716f;
 deny 2605:6400:10:12b:1877:e308:72b3:41b0;
 deny 2605:6400:10:1362::2;
@@ -423,6 +425,7 @@ deny 2a07:e042:1:181::1;
 deny 2a07:e042:1:182::1;
 deny 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 deny 2a0a:3840:8078:22:0:504e:16da:1337;
+deny 2a0a:c801:1:5::57;
 deny 2a0b:f4c0:16c:10::1;
 deny 2a0b:f4c0:16c:1::1;
 deny 2a0b:f4c0:16c:11::1;
@@ -452,7 +455,6 @@ deny 2a0b:f4c2:1::135;
 deny 2a0b:f4c2:1::137;
 deny 2a0b:f4c2:1::138;
 deny 2a0b:f4c2:1::139;
-deny 2a0b:f4c2:1::140;
 deny 2a0b:f4c2:1::142;
 deny 2a0b:f4c2:1::143;
 deny 2a0b:f4c2:1::145;
@@ -594,7 +596,6 @@ deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
-deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
 deny 2a0d:bbc7:0:1::320;
