--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -105,6 +105,7 @@ set_real_ip_from 108.181.124.143;
 set_real_ip_from 108.181.16.251;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
+set_real_ip_from 108.61.189.136;
 set_real_ip_from 109.104.153.22;
 set_real_ip_from 109.169.33.163;
 set_real_ip_from 109.69.67.17;
@@ -189,6 +190,7 @@ set_real_ip_from 162.19.214.213;
 set_real_ip_from 162.210.173.17;
 set_real_ip_from 162.216.18.62;
 set_real_ip_from 162.247.72.192;
+set_real_ip_from 162.247.72.199;
 set_real_ip_from 162.247.74.200;
 set_real_ip_from 162.247.74.201;
 set_real_ip_from 162.247.74.202;
@@ -305,6 +307,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -373,7 +376,6 @@ set_real_ip_from 185.220.101.137;
 set_real_ip_from 185.220.101.138;
 set_real_ip_from 185.220.101.139;
 set_real_ip_from 185.220.101.14;
-set_real_ip_from 185.220.101.140;
 set_real_ip_from 185.220.101.142;
 set_real_ip_from 185.220.101.143;
 set_real_ip_from 185.220.101.145;
@@ -685,6 +687,7 @@ set_real_ip_from 198.96.155.3;
 set_real_ip_from 198.98.48.31;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
+set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
 set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.51.52;
@@ -994,12 +997,14 @@ set_real_ip_from 2602:fc24:19:eb06::dead;
 set_real_ip_from 2602:fccf:310:1::a;
 set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fccf:310:1::c;
+set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
+set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1060:411f:41d8:11fe:716f;
 set_real_ip_from 2605:6400:10:12b:1877:e308:72b3:41b0;
 set_real_ip_from 2605:6400:10:1362::2;
@@ -1278,6 +1283,7 @@ set_real_ip_from 2a07:e042:1:181::1;
 set_real_ip_from 2a07:e042:1:182::1;
 set_real_ip_from 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 set_real_ip_from 2a0a:3840:8078:22:0:504e:16da:1337;
+set_real_ip_from 2a0a:c801:1:5::57;
 set_real_ip_from 2a0b:f4c0:16c:10::1;
 set_real_ip_from 2a0b:f4c0:16c:1::1;
 set_real_ip_from 2a0b:f4c0:16c:11::1;
@@ -1307,7 +1313,6 @@ set_real_ip_from 2a0b:f4c2:1::135;
 set_real_ip_from 2a0b:f4c2:1::137;
 set_real_ip_from 2a0b:f4c2:1::138;
 set_real_ip_from 2a0b:f4c2:1::139;
-set_real_ip_from 2a0b:f4c2:1::140;
 set_real_ip_from 2a0b:f4c2:1::142;
 set_real_ip_from 2a0b:f4c2:1::143;
 set_real_ip_from 2a0b:f4c2:1::145;
@@ -1449,7 +1454,6 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
-set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
@@ -1573,7 +1577,6 @@ set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
 set_real_ip_from 45.129.84.247;
-set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.137.205.138;
@@ -1663,6 +1666,7 @@ set_real_ip_from 51.195.166.174;
 set_real_ip_from 51.222.136.218;
 set_real_ip_from 51.222.142.67;
 set_real_ip_from 51.38.225.46;
+set_real_ip_from 5.181.156.44;
 set_real_ip_from 51.81.222.62;
 set_real_ip_from 51.81.254.14;
 set_real_ip_from 51.81.254.15;
@@ -1734,6 +1738,7 @@ set_real_ip_from 77.48.28.239;
 set_real_ip_from 77.81.247.72;
 set_real_ip_from 78.142.18.219;
 set_real_ip_from 79.124.8.241;
+set_real_ip_from 79.72.47.230;
 set_real_ip_from 80.241.60.207;
 set_real_ip_from 80.67.167.81;
 set_real_ip_from 80.67.172.162;
@@ -1748,6 +1753,7 @@ set_real_ip_from 8.218.9.41;
 set_real_ip_from 82.208.23.192;
 set_real_ip_from 82.221.128.191;
 set_real_ip_from 82.221.131.5;
+set_real_ip_from 82.221.139.190;
 set_real_ip_from 82.68.49.227;
 set_real_ip_from 82.85.247.254;
 set_real_ip_from 83.217.9.73;
@@ -1759,7 +1765,6 @@ set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.247.165.51;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.10.210.197;
-set_real_ip_from 85.239.41.130;
 set_real_ip_from 85.93.218.204;
 set_real_ip_from 87.118.110.27;
 set_real_ip_from 87.118.116.103;
