Update lists at 20241117-0000

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -186,6 +186,7 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
+allow 161.35.129.51;
 allow 162.19.214.213;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -307,7 +308,6 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
-allow 185.165.169.42;
 allow 185.165.171.14;
 allow 185.165.171.84;
 allow 185.170.114.25;
@@ -673,8 +673,8 @@ allow 195.47.238.83;
 allow 195.47.238.84;
 allow 195.47.238.86;
 allow 195.47.238.87;
-allow 195.47.238.89;
 allow 195.47.238.90;
+allow 195.47.238.93;
 allow 195.80.151.242;
 allow 195.88.74.206;
 allow 198.251.84.163;
@@ -1454,6 +1454,7 @@ allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
 allow 2a0d:bbc7:0:1::320;
@@ -1559,7 +1560,6 @@ allow 31.133.0.210;
 allow 31.220.75.237;
 allow 31.42.185.135;
 allow 35.0.127.52;
-allow 3.66.38.117;
 allow 37.114.41.119;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1738,7 +1738,6 @@ allow 77.48.28.239;
 allow 77.81.247.72;
 allow 78.142.18.219;
 allow 79.124.8.241;
-allow 79.72.47.230;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1765,6 +1764,7 @@ allow 84.239.46.144;
 allow 84.247.165.51;
 allow 84.252.120.163;
 allow 85.10.210.197;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 87.118.110.27;
 allow 87.118.116.103;
