--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -596,6 +596,7 @@ set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
 set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
+set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
 set_real_ip_from 2a0d:bbc7:0:1::320;
