--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -422,7 +422,6 @@ allow 2a07:e042:1:181::1;
 allow 2a07:e042:1:182::1;
 allow 2a09:6301:0:2e1:b492:c29e:f532:42c6;
 allow 2a0a:3840:8078:22:0:504e:16da:1337;
-allow 2a0a:c801:1:5::57;
 allow 2a0b:f4c0:16c:10::1;
 allow 2a0b:f4c0:16c:1::1;
 allow 2a0b:f4c0:16c:11::1;
@@ -620,6 +619,7 @@ allow 2a0f:85c1:356:596c::1;
 allow 2a0f:93c1:26:1f2::9ce5;
 allow 2a0f:9400:7e11:2859::1;
 allow 2a0f:9400:7e11:73bc::1;
+allow 2a0f:9400:7e11:8ba1::1;
 allow 2a0f:9400:7e11:b60::1;
 allow 2a0f:9400:7e11:ce4d::1;
 allow 2a0f:df00:0:255::194;
