Update lists at 20241117-2100

--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -184,7 +184,6 @@ allow 154.216.19.230;
 allow 154.26.159.157;
 allow 158.69.1.13;
 allow 160.119.249.240;
-allow 161.35.129.51;
 allow 162.19.214.213;
 allow 162.210.173.17;
 allow 162.216.18.62;
@@ -197,8 +196,10 @@ allow 162.247.74.204;
 allow 162.247.74.206;
 allow 162.247.74.213;
 allow 162.247.74.216;
+allow 162.247.74.217;
 allow 162.247.74.27;
 allow 162.247.74.7;
+allow 162.247.74.74;
 allow 162.251.5.152;
 allow 163.172.45.102;
 allow 164.132.172.209;
@@ -927,6 +928,7 @@ allow 23.154.177.11;
 allow 23.154.177.12;
 allow 23.154.177.13;
 allow 23.154.177.14;
+allow 23.154.177.15;
 allow 23.154.177.2;
 allow 23.154.177.24;
 allow 23.154.177.25;
@@ -1168,6 +1170,8 @@ allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
 allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
+allow 2a02:2658:1057:2:5054:ff:fe3f:fa8f;
+allow 2a02:2658:1057:2:5054:ff:fe51:203f;
 allow 2a02:2b88:2:48b::1;
 allow 2a02:2b88:2:6ce::1;
 allow 2a02:418:6017::147;
@@ -1759,6 +1763,8 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 87.120.254.132;
+allow 88.150.227.71;
+allow 88.150.227.76;
 allow 88.80.20.86;
 allow 88.80.26.2;
 allow 88.80.26.3;
