--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -321,6 +321,8 @@ deny 2a01:6340:2:501::20;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
 deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
+deny 2a02:2658:1057:2:5054:ff:fe3f:fa8f;
+deny 2a02:2658:1057:2:5054:ff:fe51:203f;
 deny 2a02:2b88:2:48b::1;
 deny 2a02:2b88:2:6ce::1;
 deny 2a02:418:6017::147;
