--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -143,6 +143,7 @@ allow 2602:fccf:310:1::c;
 allow 2602:fef9:100:1100::199;
 allow 2604:2dc0:101:200::162b;
 allow 2604:2dc0:101:200::1dd3;
+allow 2604:2dc0:101:200::2880;
 allow 2604:2dc0:202:300::ed3;
 allow 2604:6600:0:42::2;
 allow 2604:b480:3:6::2;
@@ -202,7 +203,6 @@ allow 2605:6400:30:f174:42:42:42:0;
 allow 2605:6400:30:f174:42:42:42:42;
 allow 2605:6400:30:f174:4:3:2:1;
 allow 2605:6400:30:f174:cafe::;
-allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 allow 2605:6400:30:f307:3aa6:91d4:da12:7eee;
 allow 2605:6400:30:f307:5d12:16d8:1641:2b15;
@@ -596,7 +596,6 @@ allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
 allow 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
-allow 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:bbc7:0:1::254;
@@ -696,4 +695,5 @@ allow 2a12:a800:2:1:45:80:158:27;
 allow 2a12:bec4:11d3:4a89::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::13;
+allow 2a12:dd47:8513::2;
 allow 2a13:d207:0:461::1;
