--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -85,7 +85,6 @@ set_real_ip_from 107.189.6.124;
 set_real_ip_from 107.189.6.36;
 set_real_ip_from 107.189.7.114;
 set_real_ip_from 107.189.7.141;
-set_real_ip_from 107.189.7.144;
 set_real_ip_from 107.189.7.161;
 set_real_ip_from 107.189.7.168;
 set_real_ip_from 107.189.7.47;
@@ -154,7 +153,9 @@ set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
 set_real_ip_from 15.204.238.148;
+set_real_ip_from 15.204.240.101;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.185.133;
 set_real_ip_from 154.213.185.165;
@@ -306,6 +307,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.165.171.14;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
@@ -505,13 +507,11 @@ set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
-set_real_ip_from 185.225.226.182;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
 set_real_ip_from 185.227.68.78;
 set_real_ip_from 185.230.163.104;
-set_real_ip_from 185.231.102.51;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.241.208.115;
 set_real_ip_from 185.241.208.196;
@@ -928,7 +928,15 @@ set_real_ip_from 23.154.177.12;
 set_real_ip_from 23.154.177.13;
 set_real_ip_from 23.154.177.14;
 set_real_ip_from 23.154.177.15;
+set_real_ip_from 23.154.177.16;
+set_real_ip_from 23.154.177.17;
+set_real_ip_from 23.154.177.18;
+set_real_ip_from 23.154.177.19;
 set_real_ip_from 23.154.177.2;
+set_real_ip_from 23.154.177.20;
+set_real_ip_from 23.154.177.21;
+set_real_ip_from 23.154.177.22;
+set_real_ip_from 23.154.177.23;
 set_real_ip_from 23.154.177.24;
 set_real_ip_from 23.154.177.25;
 set_real_ip_from 23.154.177.26;
@@ -990,6 +998,7 @@ set_real_ip_from 2602:fccf:310:1::c;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2604:2dc0:101:200::162b;
 set_real_ip_from 2604:2dc0:101:200::1dd3;
+set_real_ip_from 2604:2dc0:101:200::2880;
 set_real_ip_from 2604:2dc0:202:300::ed3;
 set_real_ip_from 2604:6600:0:42::2;
 set_real_ip_from 2604:b480:3:6::2;
@@ -1049,7 +1058,6 @@ set_real_ip_from 2605:6400:30:f174:42:42:42:0;
 set_real_ip_from 2605:6400:30:f174:42:42:42:42;
 set_real_ip_from 2605:6400:30:f174:4:3:2:1;
 set_real_ip_from 2605:6400:30:f174:cafe::;
-set_real_ip_from 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 set_real_ip_from 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 set_real_ip_from 2605:6400:30:f307:3aa6:91d4:da12:7eee;
 set_real_ip_from 2605:6400:30:f307:5d12:16d8:1641:2b15;
@@ -1444,7 +1452,6 @@ set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
 set_real_ip_from 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
-set_real_ip_from 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 set_real_ip_from 2a0c:5cc0:1:1::293c:1518;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:bbc7:0:1::254;
@@ -1544,6 +1551,7 @@ set_real_ip_from 2a12:a800:2:1:45:80:158:27;
 set_real_ip_from 2a12:bec4:11d3:4a89::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::13;
+set_real_ip_from 2a12:dd47:8513::2;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.13.195.22;
@@ -1665,6 +1673,7 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
