Update lists at 20241118-0600

--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -203,6 +203,7 @@ deny 2605:6400:30:f174:42:42:42:0;
 deny 2605:6400:30:f174:42:42:42:42;
 deny 2605:6400:30:f174:4:3:2:1;
 deny 2605:6400:30:f174:cafe::;
+deny 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 deny 2605:6400:30:f307:1712:1a11:9b1c:ab7f;
 deny 2605:6400:30:f307:3aa6:91d4:da12:7eee;
 deny 2605:6400:30:f307:5d12:16d8:1641:2b15;
@@ -596,6 +597,7 @@ deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
 deny 2a0c:2500:571:e95:ac02:20d9:b7ed:7819;
+deny 2a0c:5700:3133:650:b0ea:eeff:fedb:1f7b;
 deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:bbc7:0:1::254;
